@@ -1,3 +1,8 @@
+2004-11-04  Mark D. Baushke  <mdb@cvshome.org>
+	
+	* sanity.sh (set_bad_tool, is_bad_tool): Avoid printing errors
+	about the same tool multiple times.
+
 2004-11-03  Mark D. Baushke  <mdb@cvshome.org>
 
 	* sanity.sh (depends_on_rsync): Deal with missing rsync.
